2006-06-28  Derek R. Price  <derek@ximbiot.com>

	* savedir.c (CLOSEDIR): Remove.  All uses changed to closedir.
	Autoconf 2.60 says this stuff was obsolete.

2006-06-20  Paul Eggert  <eggert@cs.ucla.edu>

	* openat.c (openat): Use ?:, not if, to work around GCC bug 4210
	<http://gcc.gnu.org/bugzilla/show_bug.cgi?id=4210>.
	Problem reported by Denis Excoffier in
	<http://lists.gnu.org/archive/html/bug-tar/2006-06/msg00023.html>.

2006-06-19  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:
	2006-06-16  Eric Blake  <ebb9@byu.net>
	* unsetenv.c [!defined errno]: Assume errno.h declares errno.

2006-06-11  Paul Eggert  <eggert@cs.ucla.edu>

	* getdate.y (__attribute__): Don't define if already defined.
	Problem reported by Larry Jones.
	* utimens.c (__attribute__): Likewise.

2006-06-10  Jim Meyering  <jim@meyering.net>

	Apply this change from gnulib:

	2006-05-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
	            Bruno Haible  <bruno@clisp.org>

	* strndup.c (strndup) [!_LIBC]: Don't undefine macro definition.

2006-06-04  Paul Eggert  <eggert@cs.ucla.edu>

	* regexec.c (group_nodes_into_DFAstates): Fix a buffer overrun
	reported by Andreas Schwab.

2006-05-25  Paul Eggert  <eggert@cs.ucla.edu>

	* tempname.c (small_open, large_open): New macros.
	(__open, __open64) [!_LIBC]: Remove.
	(__gen_tempname): Use small_open and large_open instead of __open
	and __open64.  This fixes a portability bug on HP-UX 11.11i
	reported by Simon Wing-Tang in
	<http://lists.gnu.org/archive/html/bug-coreutils/2006-05/msg00114.html>.

2006-05-23  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c: Don't include <string.h>; this include was
	inadvertently put into the previous patch.  Problem noted
	by Jim Meyering.

2006-05-22  Paul Eggert  <eggert@cs.ucla.edu>

	* filemode.c (setst): Remove.
	(strmode): Rewrite to avoid setst.  This makes the code shorter,
	(arguably) clearer, and the generated code is a bit smaller on my
	Debian GNU/Linux stable x86 host.
